--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,5 @@ cache:
   directories:
     - node_modules
 script:
-  - npm test
+  - npm install -g codecov
+  - CI=true npm test -- --coverage && codecov
