--- a/package.json
+++ b/package.json
@@ -16,32 +16,25 @@
   "dependencies": {
     "antd": "^3.19.3",
     "axios": "^0.18.0",
-    "bootstrap": "^4.3.1",
-    "immer": "^3.1.2",
     "immutability-helper": "^3.0.1",
-    "jquery": "^3.4.1",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
-    "popper.js": "^1.15.0",
     "react": "^16.8.6",
-    "react-alert": "^4.0.4",
-    "react-alert-template-basic": "^1.0.0",
     "react-dnd": "^8.0.3",
     "react-dnd-html5-backend": "^8.0.3",
     "react-dom": "^16.8.6",
-    "react-easy-edit": "^1.2.1",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "react-spinners": "^0.5.4",
-    "react-transition-group": "^4.0.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "aws s3 sync build/ s3://www.myfoodplan.app --acl public-read",
     "test": "react-scripts test --transformIgnorePatterns 'node_modules/(?!(react-dnd|dnd-core|react-dnd-html5-backend)/)'",
     "eject": "react-scripts eject"
   },
@@ -62,6 +55,8 @@
   },
   "devDependencies": {
     "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0"
+    "enzyme-adapter-react-16": "^1.14.0",
+    "moxios": "^0.4.0",
+    "redux-mock-store": "^1.5.3"
   }
 }
