--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ script:
 deploy:
   provider: script
   skip_cleanup: true
-  script: 'npm run build && npm run deploy'
+  script: 'pip install awscli --user && npm run build && npm run deploy'
   on:
     all_branches: true
